syntax="proto3";

package data;

option go_package="/data";

message Block {
  string TableName = 1;
  int64 Size = 2;
  int64 BlockID = 3;
}

message DataBlocks {
  repeated Block Blocks = 1;
}

message SaveBlockReq {
  bytes Data = 1;
}



message SaveBlockResp {
  uint64 ObjectID = 1;
}

message DownloadObjectReq {
  uint64 ObjectID = 1;
  int64 Offset = 2;
  int64 Limit = 3;
}

message DownloadObjectResp {
  bytes data = 1;
}

service Data {
  rpc SaveBlock(stream SaveBlockReq) returns (SaveBlockResp);
  rpc DownloadObject(DownloadObjectReq) returns (stream DownloadObjectResp);
}